--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -17,3 +17,10 @@
 .u-left-padding-zero{
     padding-left:0;
 }
+
+.u-padding-top-med{
+    padding-top: 5rem;
+}
+.u-padding-bottom-med{
+    padding-bottom: 15rem;
+}
