--- a/sass/components/_offerings.scss
+++ b/sass/components/_offerings.scss
@@ -7,6 +7,8 @@
     &__link{
         text-decoration: none;
         color:inherit;
+        font-size:$text-med-small;
+        letter-spacing:1.5px;
     }
 
     &__item{
