--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -1,19 +1,77 @@
 @font-face{
     font-family: 'Morganite';
-    src:url(../fonts/Morganite-Black.ttf) format('ttf'),
-    url(../fonts/Morganite-BlackItalic.ttf) format('ttf'),
-    url(../fonts/Morganite-Bold.ttf) format('ttf'),
-    url(../fonts/Morganite-BoldItalic.ttf) format('ttf'),
-    url(../fonts/Morganite-Book.ttf) format('ttf'),
-    url(../fonts/Morganite-BookItalic.ttf) format('ttf'),
-    url(../fonts/Morganite-ExtraBold.ttf) format('ttf'),
-    url(../fonts/Morganite-ExtraBoldItalic.ttf) format('ttf'),
-    url(../fonts/Morganite-ExtraLight.ttf) format('ttf'),
-    url(../fonts/Morganite-LightItalic.ttf) format('ttf'),
-    url(../fonts/Morganite-Medium.ttf) format('ttf'),
-    url(../fonts/Morganite-MediumItalic.ttf) format('ttf'),
-    url(../fonts/Morganite-SemiBold.ttf) format('ttf'),
-    url(../fonts/Morganite-SemiBoldItalic.ttf) format('ttf'),
-    url(../fonts/Morganite-Thin.ttf) format('ttf'),
-    url(../fonts/Morganite-ThinItalic.ttf) format('ttf');
+    src:url(../fonts/Morganite-Black.ttf) format('truetype');
+    font-style: normal;
+    font-weight: normal;
+    size-adjust: 180%
+    
+}
+
+@font-face{
+    font-family: 'Morganite';
+    src:url(../fonts/Morganite-BlackItalic.ttf) format('truetype');
+    font-style: italic;
+    font-weight: bold;
+    size-adjust: 180%
+    
+}
+@font-face{
+    font-family: 'Morganite';
+    src: url(../fonts/Morganite-Bold.ttf) format('truetype');
+    font-style: italic;
+    font-weight: bold;
+    size-adjust: 180%
+    
+}
+
+@font-face{
+    font-family: 'Morganite';
+    src:url(../fonts/Morganite-BoldItalic.ttf) format('truetype');
+    font-style: italic;
+    font-weight: bold;
+    size-adjust: 180%
+    
+  
+}
+@font-face{
+    font-family: 'Morganite';
+    src: url(../fonts/Morganite-Light.ttf) format('truetype');
+    font-style: normal;
+    font-weight: normal;
+    size-adjust: 180%
+    
+}
+@font-face{
+    font-family: 'Morganite';
+    src:url(../fonts/Morganite-LightItalic.ttf) format('truetype');
+    font-style: italic;
+    font-weight: normal;
+    size-adjust: 180%
+    
+}
+@font-face{
+    font-family: 'Morganite';
+    src:url(../fonts/Morganite-Medium.ttf) format('truetype');
+    font-style: normal;
+    font-weight: normal;
+    size-adjust: 180%
+    
+}
+
+@font-face{
+    font-family: 'Morganite';
+    src:url(../fonts/Morganite-MediumItalic.ttf) format('truetype');
+    font-style: italic;
+    font-weight: normal;
+    size-adjust: 180%
+    
+}
+
+@font-face{
+    font-family: 'Morganite';
+    src:url(../fonts/Morganite-Thin.ttf) format('truetype');
+    font-style: normal;
+    font-weight: 100;
+    size-adjust: 180%
+    
 }
