--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -3,8 +3,8 @@
     grid-template-columns: [start] repeat(7, [col] 1fr [col]) [end];
     grid-template-rows: repeat(12, 3rem);
     grid-row-gap: 4.5rem;
-    grid-column-gap:3rem;
-    width:100rem;
+    grid-column-gap:4rem;
+    width:140rem;
 
     &__item{
         position:relative;
@@ -13,17 +13,16 @@
     &__description{
         padding-top:.5rem;
         text-transform: uppercase;
-        font-size:$text-small-med;
-        transform: scale(1, 1.1);
-        letter-spacing: -1px;
+        font-size:$text-small;
         color:$color-purple;
-        font-weight: 600;
+        font-weight: bold;
+        letter-spacing: 2px;
     }
 
     &__image{
         object-fit: cover;
-        width:100%;
-        height: 100%;
+        width:97%;
+        height: 95%;
         display:block;
         transform-origin:bottom;
         transition:transform .3s;
@@ -36,11 +35,10 @@
 
     &__button{
         position:absolute;
-        bottom:5%;
+        bottom:10%;
         right:0;
         transform:translateX(10%);
         transition:background-color .2s;
-        
 
         &:hover{
             background-color:$color-purple;
@@ -48,7 +46,9 @@
 
         & .button__text{
             text-transform: uppercase;
-            transform:scale(1, 1.2);
+            font-size: $text-small-med;
+            letter-spacing: 2.5px;
+            font-weight: bold;
         }
     }
 }
