--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,13 +1,15 @@
 .footer{ 
     background-color: $color-light;
+    padding-top:8rem;
+
     & .background-layer{
         &__clip{
             position:absolute;
-            top:0;
+            bottom:0;
             left:0;
             width: 100%;
-            height: 100%;
-            clip-path:polygon(100% 100%, 0% 100%, 0% 20%, 50% 0%, 100% 20%);
+            height: 90%;
+            clip-path:polygon(100% 100%, 0% 100%, 0% 10%, 50% 0%, 100% 10%);
             background-color: $color-purple;
         }
     }
@@ -16,7 +18,7 @@
         &--top{
             top:0;
             left:0;
-            height: 100%;
+            height: 40rem;
         }
         &--bottom{
             bottom:0;
@@ -29,24 +31,26 @@
         z-index:$z-content-layer;
         display:flex;
         padding:10rem 0 10rem 0;    
+        justify-content: space-between;
     
         &>*{
-            flex-grow:1;
+            flex-basis:calc(1/2*100%);
+           // flex-grow:1;
         }
     }
 
     &__logo-box{
         text-align: right;
-        padding-right:3rem; //connected
+        padding-right:4rem; //connected
     }
     &__logo{
-
+        margin-right:5rem;
     }
     &__list{
         display:flex;
         flex-direction: row;
         list-style-type: none;
-        padding-left:3rem; //connected
+        padding-left:1rem; //connected
 
         &--standalone{
             padding-left:0;
@@ -74,10 +78,10 @@
     }
     &__link,
     &__text{
-        color:whitesmoke;
-        font-size:$text-small-med;
+        color:$color-light;
+        font-size:$text-small;
         text-transform: uppercase;
-
+        letter-spacing: 2px;
     }
     &__link{
         text-decoration: none;
@@ -86,7 +90,12 @@
         }
     }
     &__button{
-        padding:2rem 4rem;
+
+        &.footer__link{
+            font-size:$text-small;
+            letter-spacing: 3px;
+            padding:0.6rem 3rem;
+        }
         &:hover{
             color:$color-light;
             background-color: $color-orange;
